--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/index.html
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/index.html
@@ -1,9 +1,665 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-</body>
-</html>
+<table class="table table-striped">
+<thead>
+<tr>
+    <th>
+        Id
+    </th>
+    <th>
+        <input type="checkbox" name="spToggle" value="1" rel="p_fid">
+    </th>
+    <th>
+        Field Name
+    </th>
+    <th>
+        State
+    </th>
+    <th>
+        Field Type
+    </th>
+    <th>
+        Show In
+    </th>
+    <th>
+        Is Required
+    </th>
+    <th>
+        Is Editable
+    </th>
+    <th>
+        Is Free
+    </th>
+    <th>
+        Position
+        <div class="pull-right">
+            <button class="btn sp-mini-bt">
+                <i class="icon-check"></i>
+            </button>
+        </div>
+    </th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+<td>
+
+</td>
+<td>
+    <input type="checkbox" name="p_fid[]" value="1">
+</td>
+<td>
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+
+    <div class="pull-right">
+        <button class="btn sp-mini-bt">
+            <i class="icon-check"></i>
+        </button>
+    </div>
+</td>
+</tr>
+</tbody>
+</table>
