--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -1,89 +1,138 @@
 @background: #ffffff;
+@font: #333;
+@font-size: 15px;
+
+.SobiPro {
+    color: @font;
+    font-size: @font-size;
+}
+
+.SobiPro .breadcrumb {
+    padding: 7px 14px;
+    margin: 0 0 18px;
+    list-style: none;
+    background-color: #FBFBFB;
+    background-image: -moz-linear-gradient(top, white, whiteSmoke);
+    background-image: -ms-linear-gradient(top, white, whiteSmoke);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(whiteSmoke));
+    background-image: -webkit-linear-gradient(top, white, whiteSmoke);
+    background-image: -o-linear-gradient(top, white, whiteSmoke);
+    background-image: linear-gradient(top, white, whiteSmoke);
+    background-repeat: repeat-x;
+    border: 1px solid #DDD;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#f5f5f5', GradientType = 0);
+    -webkit-box-shadow: inset 0 1px 0 white;
+    -moz-box-shadow: inset 0 1px 0 #ffffff;
+    box-shadow: inset 0 1px 0 white;
+}
+
+#SPAdmToolbar .dropdown-menu .SpDropDownBt li {
+    min-width: 150px;
+}
+
+.SobiPro .btn-group {
+    font-size: 0;
+    white-space: normal;
+}
+
+.SobiPro .breadcrumb .divider {
+    padding: 0 5px;
+    color: #999999;
+}
+
+.SobiPro .breadcrumb .active a {
+    color: #333333;
+}
 
 #toolbar-box {
-	display: none;
+    display: none;
 }
 
 .SobiPro .table th.SpCellCenter,
 .SobiPro .table td.SpCellCenter {
-	text-align: center;
+    text-align: center;
 }
+
 .submenu-box, div.m {
-	background-color: @background;
+    background-color: @background;
 }
 
 #SPAdmToolbar .nav {
-	margin-bottom: 0px
+    margin-bottom: 0px
 }
 
 #SPAdmToolbar .well {
-	margin-bottom: 3px;
-	height: 30px;
+    margin-bottom: 3px;
+    height: 30px;
 }
 
 #SPAdmToolbar .container-fluid {
-	padding: 0px;
+    padding: 0px;
 }
 
 #SPAdmToolbar .container-fluid [class*="span"] {
-	margin-left: 0px;
+    margin-left: 0px;
 }
 
 #SPAdmToolbar .nav-pills > .active > a,
 #SPAdmToolbar .SobiPro .nav-pills > .active > a:hover {
-	color: inherit;
-	background-color: whiteSmoke;
+    color: inherit;
+    background-color: whiteSmoke;
 }
 
 div.spScreenTitle,
 div.spScreenSubHead {
-	background-repeat: no-repeat;
-	background-position: 2%;
+    background-repeat: no-repeat;
+    background-position: 2%;
+    height: 45px;
 }
 
 div.spScreenSubHead {
-	font-weight: bold;
-	font-size: 15px;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 div.spScreenTitle:first-child,
 div.spScreenSubHead:first-child {
-	padding-left: 70px;
+    padding-left: 70px;
 }
 
 #SPAdmToolbar .btn-group {
-	float: left;
+    float: left;
 }
 
 #SPAdmToolbar .btn {
-	float: left;
+    float: left;
 }
 
-#SPAdmToolbar .dropdown-menu .SpDropDownBt li {
-	/*display: block;*/
-	min-width: 150px;
+#SPAdmToolbar .dropdown-menu .SpDropDownBt li { //    display: block;
+    min-width: 150px;
 }
 
 #SPAdmToolbar .dropdown-menu .SpDropDownBt li a:hover {
-	background-color: #0088cc;
+    background-color: #0088cc;
 }
 
 #SPAdmToolbar .divider {
-	padding: 0 5px;
-	color: #999;
-	float: left;
-	display: block;
-	margin: 0.2pt;
+    padding: 0 5px;
+    color: #999;
+    float: left;
+    display: block;
+    margin: 0.2pt;
 }
 
-#SPAdmToolbar .nav .nav-header {
-	white-space: nowrap;
+#SPAdmToolbar .nav-header {
+    white-space: nowrap;
 }
 
 #SPAdminForm table .control-label {
-	padding-top: 5px;
+    padding-top: 5px;
     color: #000099;
 }
+
 #SPAdminForm table a {
     color: #000099;
 }
@@ -92,9 +141,11 @@ div.spScreenSubHead:first-child {
     padding-top: 0px;
     width: 200px;
 }
+
 #SPAdminForm .spFieldGroup {
     margin-bottom: 0px;
 }
+
 #SPAdminForm .spFieldGroup label {
     color: #993333;
     border-bottom: 1px solid #CC9999;
@@ -105,6 +156,7 @@ div.spScreenSubHead:first-child {
 #SPAdminForm fieldset .controls {
     margin-left: 220px;
 }
+
 #SPAdminForm .nav-tabs a {
     color: #000099; /*#0088cc;*/
     text-decoration: none;
@@ -117,8 +169,9 @@ div.spScreenSubHead:first-child {
 #SPAdminForm .controls .btn:active,
 #SPAdminForm .controls .btn.active {
     background-color: #993333;
-    color:#f5f5f5;
+    color: #f5f5f5;
 }
+
 #SPAdminForm input,
 #SPAdminForm textarea,
 #SPAdminForm select,
@@ -135,9 +188,9 @@ div.spScreenSubHead:first-child {
     color: #555555;
 }
 
-input.sp-input-micro[type="text"]{
-	width: 25px;
-	text-align: center;
+input.sp-input-micro[type="text"] {
+    width: 25px;
+    text-align: center;
 }
 
 .spOutput {
@@ -146,123 +199,111 @@ input.sp-input-micro[type="text"]{
 }
 
 .sp-mini-bt {
-	width: 25px;
-	height: 20px;
-	padding: 0px!important;
+    width: 25px;
+    height: 20px;
+    padding: 0px !important;
 }
 
 .spScreenSubHead {
-	padding: 10px;
+    padding: 10px;
 }
 
-
 .spicon-48-SobiPro {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-sobipro.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-sobipro.png);
 }
 
 .spicon-48-SobiApplication {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-application.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-application.png);
 }
 
 .spicon-48-SobiApplicationSection {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-application-section.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-application-section.png);
 }
 
 .spicon-48-SobiTemplate {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-templates.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-templates.png);
 }
 
 .spicon-48-SobiTemplateSection {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-template-section.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-template-section.png);
 }
 
 .spicon-48-SobiSection {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-section.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-section.png);
 }
 
 .spicon-48-SobiSectionCfg {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-section-cfg.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-section-cfg.png);
 }
 
 .spicon-48-SobiCategory {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-category.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-category.png);
 }
 
 .spicon-48-SobiCatList {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-categories.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-categories.png);
 }
 
 .spicon-48-SobiFields {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-fieldsmanager.png);
 }
 
 .spicon-48-SobiFieldList {
-	background-image:
-		url(../../../../media/sobipro/48x48/fields.png);
+    background-image: url(../../../../media/sobipro/48x48/fields.png);
 }
 
 .spicon-48-SobiConfig {
-	background-image:
-		url(../../../../media/sobipro/48x48/folder-configuration.png);
+    background-image: url(../../../../media/sobipro/48x48/folder-configuration.png);
 }
 
 .spicon-48-SobiEdit {
-	background-image:
-		url(../../../../media/sobipro/48x48/editor.png);
+    background-image: url(../../../../media/sobipro/48x48/editor.png);
 }
 
 .spicon-48-SobiFieldEdit {
-	background-image:
-		url(../../../../media/sobipro/48x48/edit-rename.png);
+    background-image: url(../../../../media/sobipro/48x48/edit-rename.png);
 }
 
 .spicon-48-SobiEntries {
-	background-image:
-		url(../../../../media/sobipro/48x48/entries.png);
+    background-image: url(../../../../media/sobipro/48x48/entries.png);
 }
+
 .spicon-48-SobiUser {
-	background-image:
-		url(../../../../media/sobipro/48x48/sobipro-acl-edit.png);
+    background-image: url(../../../../media/sobipro/48x48/sobipro-acl-edit.png);
 }
+
 .spicon-48-SobiLevels {
-	background-image:
-		url(../../../../media/sobipro/48x48/sobipro-acl.png);
+    background-image: url(../../../../media/sobipro/48x48/sobipro-acl.png);
 }
 
 .spicon-32-delete {
-	background-image: url(../../../../media/sobipro/32x32/delete.png)!important;
+    background-image: url(../../../../media/sobipro/32x32/delete.png) !important;
 }
 
 .spicon-32-download {
-	background-image: url(../../../../media/sobipro/32x32/download.png);
+    background-image: url(../../../../media/sobipro/32x32/download.png);
 }
 
 .spicon-32-list {
-	background-image: url(../../../../media/sobipro/32x32/software-update.png);
+    background-image: url(../../../../media/sobipro/32x32/software-update.png);
 }
 
 .spicon-32-cleanCache {
-	background-image: url(../../../../media/sobipro/32x32/eraser.png);
+    background-image: url(../../../../media/sobipro/32x32/eraser.png);
 }
 
 .spicon-32-document-save-all {
-	background-image: url(../../../../media/sobipro/32x32/document-save-all.png);
+    background-image: url(../../../../media/sobipro/32x32/document-save-all.png);
 }
 
 .spicon-32-save {
-	background-image: url(../../../../media/sobipro/32x32/document-save.png)!important;
+    background-image: url(../../../../media/sobipro/32x32/document-save.png) !important;
 }
 
 .spicon-32-help {
-	background-image: url(../../../../media/sobipro/32x32/sobipro-help.png)!important;
+    background-image: url(../../../../media/sobipro/32x32/sobipro-help.png) !important;
+}
+
+#SPAdmToolbar h3 {
+    line-height: 20px;
 }
