--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -22,7 +22,7 @@
     border: 1px solid #DDD;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    border-radius: 3px;
+    border-radius: 6px;
     filter: progid:dximagetransform.microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#f5f5f5', GradientType = 0);
     -webkit-box-shadow: inset 0 1px 0 white;
     -moz-box-shadow: inset 0 1px 0 #ffffff;
@@ -65,12 +65,10 @@
 }
 
 #SPAdmToolbar .well {
-    margin-bottom: 3px;
-    height: 30px;
 }
 
 #SPAdmToolbar .container-fluid {
-    padding: 0px;
+    padding: 0;
 }
 
 #SPAdmToolbar .container-fluid [class*="span"] {
@@ -82,7 +80,10 @@
     color: inherit;
     background-color: whiteSmoke;
 }
-
+#SPAdmToolbar .spIconBar {
+    padding-top: 8px;
+    height: 45px;
+}
 div.spScreenTitle,
 div.spScreenSubHead {
     background-repeat: no-repeat;
@@ -141,6 +142,7 @@ div.spScreenSubHead:first-child {
     padding-top: 0px;
     width: 200px;
 }
+
 
 #SPAdminForm .spFieldGroup {
     margin-bottom: 0px;
