--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
@@ -1,71 +1,1 @@
-/**
- * @version: $Id: menu.css 551 2011-01-11 14:34:26Z Radek Suski $
- * @package: SobiPro Library
- * ===================================================
- * @author
- * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
- * Email: sobi[at]sigsiu.net
- * Url: http://www.Sigsiu.NET
- * ===================================================
- * @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
- * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
- * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
- * ===================================================
- * $Date: 2011-01-11 15:34:26 +0100 (Tue, 11 Jan 2011) $
- * $Revision: 551 $
- * $Author: Radek Suski $
- * $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/media/css/adm/menu.css $
- */
-
-div.SPmenuTabHeader {
-	color: #333333;
-	font-size: 12px;
-	font-weight: bold;
-	cursor: pointer;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #dddddd #dddddd #bbbbbb #bbbbbb;
-	background-color: #f0f0f0;
-	background-attachment: scroll;
-	height: 20px;
-	padding-top: 5px;
-	padding-left: 10px;
-	margin-top: -1px;
-	margin-bottom: -1px;
-    margin: 1px;
-
-}
-
-div#SPaccordionTabs {
-	border-style: solid;
-	border-color: #cccccc;
-	border-width: 1px;
-	width: 220px;
-}
-
-div.SPcontentTabHeader {
-	min-height: 250px;
-}
-
-div.SPcontentTabHeader li {
-	margin-left: -10px;
-}
-
-a.SPMenuActive {
-	color: #000000!important;
-	text-decoration: underline!important;
-}
-
-div.SPcontentTabHeader a {
-	color: #0b55c4;
-	text-decoration: none;
-	font-weight: bold;
-}
-
-div.SPcontentTabHeader a:hover {
-	text-decoration: underline;
-}
-
-div.menuTreeSigsiuTree {
-	margin-left: 15px;
-}
+#SpMenu .accordion-inner{min-height:200px}a.SPMenuActive{color:#000!important;text-decoration:underline!important}div.SPcontentTabHeader a{color:#0b55c4;text-decoration:none;font-weight:bold}div.SPcontentTabHeader a:hover{text-decoration:underline}div.menuTreeSigsiuTree{margin-left:15px}#SPMenuCtrl{margin:5px}#SPRightMenuHold{margin-top:-8px;margin-left:-14px;margin-bottom:9px;position:absolute}#SPMenuCtrl{position:absolute;margin-left:0;margin-top:-1px}
