--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
@@ -1,1 +1,50 @@
-#SpMenu .accordion-inner{min-height:200px}a.SPMenuActive{color:#000!important;text-decoration:underline!important}div.SPcontentTabHeader a{color:#0b55c4;text-decoration:none;font-weight:bold}div.SPcontentTabHeader a:hover{text-decoration:underline}div.menuTreeSigsiuTree{margin-left:15px}#SPMenuCtrl{margin:5px}#SPRightMenuHold{margin-top:-8px;margin-left:-14px;margin-bottom:9px;position:absolute}#SPMenuCtrl{position:absolute;margin-left:0;margin-top:-1px}
+/**
+ * @version: $Id: menu.css 551 2011-01-11 14:34:26Z Radek Suski $
+ * @package: SobiPro Library
+ * ===================================================
+ * @author
+ * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
+ * Email: sobi[at]sigsiu.net
+ * Url: http://www.Sigsiu.NET
+ * ===================================================
+ * @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
+ * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
+ * ===================================================
+ * $Date: 2011-01-11 15:34:26 +0100 (Tue, 11 Jan 2011) $
+ * $Revision: 551 $
+ * $Author: Radek Suski $
+ * $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/media/css/adm/menu.css $
+ */
+#SpMenu .accordion-inner {
+  min-height: 200px;
+}
+a.SPMenuActive {
+  color: #000000 !important;
+  text-decoration: underline !important;
+}
+div.SPcontentTabHeader a {
+  color: #0b55c4;
+  text-decoration: none;
+  font-weight: bold;
+}
+div.SPcontentTabHeader a:hover {
+  text-decoration: underline;
+}
+div.menuTreeSigsiuTree {
+  margin-left: 15px;
+}
+#SPMenuCtrl {
+  margin: 5px;
+}
+#SPRightMenuHold {
+  margin-top: 52px;
+  margin-left: -15px;
+  margin-bottom: 9px;
+  position: absolute;
+}
+#SPMenuCtrl {
+  position: absolute;
+  margin-left: 0px;
+  margin-top: -1px;
+}
