--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -64,7 +64,8 @@
     margin-bottom: 0px
 }
 
-#SPAdmToolbar .well {
+#SPAdmToolbar h3 {
+    line-height: 20px;
 }
 
 #SPAdmToolbar .container-fluid {
@@ -180,7 +181,7 @@ div.spScreenTitle h4 {
     background-color: #993333;
     color: #f5f5f5;
 }
-.btn-sobipro {
+.SobiPro .btn-sobipro {
     color: #f5f5f5;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     background-color: #a83939;
@@ -196,24 +197,24 @@ div.spScreenTitle h4 {
     filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffd31010', endColorstr='#ff993333', GradientType=0);
     filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 }
-.btn-sobipro:hover,
-.btn-sobipro:active,
-.btn-sobipro.active,
-.btn-sobipro.disabled,
-.btn-sobipro[disabled] {
+.SobiPro .btn-sobipro:hover,
+.SobiPro .btn-sobipro:active,
+.SobiPro .btn-sobipro.active,
+.SobiPro .btn-sobipro.disabled,
+.SobiPro .btn-sobipro[disabled] {
     color: #f5f5f5;
     background-color: #993333;
     *background-color: #990000;
 }
 
-.btn-sobipro:active,
-.btn-sobipro.active {
+.SobiPro .btn-sobipro:active,
+.SobiPro .btn-sobipro.active {
     background-color: #003399 \9;
 }
-.btn-group.open .btn-sobipro.dropdown-toggle {
+.SobiPro .btn-group.open .btn-sobipro.dropdown-toggle {
     background-color: #993333;
 }
-.btn-sobipro .caret {
+.SobiPro .btn-sobipro .caret {
     border-top-color: #ffffff;
     border-bottom-color: #ffffff;
 }
@@ -234,7 +235,7 @@ div.spScreenTitle h4 {
     color: #555555;
 }
 
-.btn-sobipro.active {
+.SobiPro .btn-sobipro.active {
     color: rgba(255, 255, 255, 0.75);
 }
 
@@ -355,6 +356,3 @@ input.sp-input-micro[type="text"] {
     background-image: url(../../../../media/sobipro/32x32/sobipro-help.png) !important;
 }
 
-#SPAdmToolbar h3 {
-    line-height: 20px;
-}
