--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/menu.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/menu.less
@@ -21,11 +21,6 @@
     min-height: 200px;
 }
 
-a.SPMenuActive {
-    color: #000000 !important;
-    text-decoration: underline !important;
-}
-
 div.SPcontentTabHeader a {
     color: #0b55c4;
     text-decoration: none;
@@ -37,7 +32,7 @@ div.SPcontentTabHeader a:hover {
 }
 
 div.menuTreeSigsiuTree {
-    margin-left: 15px;
+   // margin-left: 15px;
 }
 
 #SPMenuCtrl {
@@ -54,5 +49,53 @@ div.menuTreeSigsiuTree {
 #SPMenuCtrl {
     position: absolute;
     margin-left: 0px;
-    margin-top: -1px;
+    margin-top: 0px;
 }
+
+#SPaccordionTabs .well {
+    margin-bottom: 0;
+}
+
+#SPaccordionTabs .accordion-heading .accordion-toggle {
+    padding: 8px 10px;
+}
+
+#SPaccordionTabs a {
+    color: #555555;
+}
+#SPaccordionTabs a:hover {
+    background-color: #eeeeee;
+    color: #333333;
+    text-decoration: none;
+}
+
+#SPaccordionTabs ul,
+#spaccordiontabs ol {
+    margin: 0 0 10px 2px;
+    list-style: none;
+    font-size: 13px;
+}
+
+#SPRightMenu .brand a {
+    color: #7f7f7f;
+}
+
+#SPaccordionTabs li a {
+    display: block;
+    padding: 3px 5px;
+    margin-left: -7px;
+    margin-right: -7px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    color: #555555;
+}
+#SPaccordionTabs li .active a,
+#SPaccordionTabs li .active a:hover {
+}
+
+#SPaccordionTabs a.SPMenuActive {
+    background-color: #993333;
+    color: #ffffff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+}
+
+
