--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
@@ -19,10 +19,6 @@
 #SpMenu .accordion-inner {
   min-height: 200px;
 }
-a.SPMenuActive {
-  color: #000000 !important;
-  text-decoration: underline !important;
-}
 div.SPcontentTabHeader a {
   color: #0b55c4;
   text-decoration: none;
@@ -30,9 +26,6 @@ div.SPcontentTabHeader a {
 }
 div.SPcontentTabHeader a:hover {
   text-decoration: underline;
-}
-div.menuTreeSigsiuTree {
-  margin-left: 15px;
 }
 #SPMenuCtrl {
   margin: 5px;
@@ -46,5 +39,41 @@ div.menuTreeSigsiuTree {
 #SPMenuCtrl {
   position: absolute;
   margin-left: 0px;
-  margin-top: -1px;
+  margin-top: 0px;
+}
+#SPaccordionTabs .well {
+  margin-bottom: 0;
+}
+#SPaccordionTabs .accordion-heading .accordion-toggle {
+  padding: 8px 10px;
+}
+#SPaccordionTabs a {
+  color: #555555;
+}
+#SPaccordionTabs a:hover {
+  background-color: #eeeeee;
+  color: #333333;
+  text-decoration: none;
+}
+#SPaccordionTabs ul,
+#spaccordiontabs ol {
+  margin: 0 0 10px 2px;
+  list-style: none;
+  font-size: 13px;
+}
+#SPRightMenu .brand a {
+  color: #7f7f7f;
+}
+#SPaccordionTabs li a {
+  display: block;
+  padding: 3px 5px;
+  margin-left: -7px;
+  margin-right: -7px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  color: #555555;
+}
+#SPaccordionTabs a.SPMenuActive {
+  background-color: #993333;
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
 }
